--- a/templates/import_excel.html
+++ b/templates/import_excel.html
@@ -208,7 +208,7 @@
     </div>
 
     <footer>
-        <p>ScoreSense © 2025</p>
+        <p>&copy; 2025 ScoreSense. AI-powered student performance analytics.</p>
     </footer>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
